<resources>
    <string name="app_name">Shoe Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="evan2003_gmail_com">evan2003@gmail.com</string>
    <string name="passwordHint">******</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules">Rules</string>
</resources>